Added REST API testing capabilities

--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -1,4 +1,4 @@
-#Sun Aug 26 20:03:23 IST 2018
+#Sun Aug 26 20:47:57 IST 2018
 execution.default.executionConfiguration="Chrome"
 execution.default.timeout=30
 execution.default.openReportAfterExecuting=true
@@ -11,7 +11,7 @@ mailConfig.encryptionEnabled=true
 mailConfig.host="W4NBYQx2f8HpeOjAwfjgDA\=\="
 mailConfig.port="yNUOwk0iqmw\="
 mailConfig.username="lOlhD1SfsTs5O1SG5MHatahYpQNSnhELHb+AKb14Ffnn0hu/YObrOA\=\="
-mailConfig.password="9NLz+4tGZcQ\="
+mailConfig.password="whhHOlLVSBFNzBmLGvYHJA\=\="
 mailConfig.securityProtocol="Pg7Y8TRF5xI\="
 mailConfig.attachment=true
 mailConfig.subject="Free CRM - Katalon Execution Summary Report"
